[package]
name = "moss"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
volatile = "0.3"
spin = "0.9.5"
x86_64 = "0.14.10"
uart_16550 = { version = "0.2.0", default-features = false }
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.10.4"

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
    "-no-reboot"
]
test-success-exit-code = 33
test-timeout = 300
